@@ -27,10 +27,12 @@ struct S1 x = { 1, {{2, 3}, {4, 5}}, {{6, 7}, {8, 9}} };
 
 #ifndef __SDCC_mcs51 // mcs51 does not yet support returning struct
 #if !defined(__SDCC_hc08) && !defined(__SDCC_s08) && !defined(__SDCC_mos6502) // Bug #3356
+#if !defined(__SDCC_ds390) // Bug #3362
 struct S1 func (void)
 {
   return x;
 }
+#endif
 #endif
 #endif
 
